tests/ui/consts/miri_unleashed/assoc_const.stderr
error[E0080]: evaluation of `<String as Bar<Vec<u32>, String>>::F` failed
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |
   = note: calling non-const function `<Vec<u32> as Drop>::drop`
   |
note: inside `std::ptr::drop_in_place::<Vec<u32>> - shim(Some(Vec<u32>))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `std::ptr::drop_in_place::<(Vec<u32>, u32)> - shim(Some((Vec<u32>, u32)))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `<String as Bar<Vec<u32>, String>>::F`
  --> $DIR/assoc_const.rs:12:31
   |
LL |     const F: u32 = (U::X, 42).1;
   |                               ^

note: erroneous constant used
  --> $DIR/assoc_const.rs:29:13
   |
LL |     let y = <String as Bar<Vec<u32>, String>>::F;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant used
  --> $DIR/assoc_const.rs:29:13
   |
LL |     let y = <String as Bar<Vec<u32>, String>>::F;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/assoc_const.rs:12:20
   |
LL |     const F: u32 = (U::X, 42).1;
   |                    ^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
